Comprimi imagenes y borre espacios en su nombre reemplazando por -

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" alt="Logo Nutrición JG" width="90" loading="lazy" class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" alt="Logo Nutrición JG" width="90" loading="lazy" class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active fondosIndex">
-                    <img src="Imagenes/Juli fondo.JPG" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
+                    <img src="Imagenes/Juli-fondo.jpg" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <h1 class="titulosImagenFondo">Nutrición J.G</h1>
                         <div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="carousel-item fondosIndex">
-                    <img src="Imagenes/foto compu mano.JPG" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
+                    <img src="Imagenes/foto-compu-mano.jpg" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <p class="titulosImagenFondo">Nutrición J.G</p>
                         <div>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="carousel-item fondosIndex">
-                    <img src="Imagenes/Juli compu carrusel.jpg" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
+                    <img src="Imagenes/Juli-compu-carrusel.jpg" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <p class="titulosImagenFondo">Nutrición J.G</p>
                         <div>
@@ -103,7 +103,7 @@
         <section class="container-fluid seccionSobreMi">
             <h2 class="tituloSobreMi titulos">Sobre mi</h2>
             <div class="row d-flex justify-content-evenly sobreMiImg">
-                <img src="Imagenes/Foto juli gimenez nutricionista.JPG" alt="Foto Juli Gimenez nutricionista" loading="lazy" class="col-12 col-lg-6 img-fluid fotoNutricionista">
+                <img src="Imagenes/Foto-juli-gimenez-nutricionista.jpg" alt="Foto Juli Gimenez nutricionista" loading="lazy" class="col-12 col-lg-6 img-fluid fotoNutricionista">
                 <div class="col-12 col-lg-6">
                     <p class="sobreMiTexto"> ¡Hola! Mi nombre es Juli y quiero darte la bienvenida a mi página web. Como Licenciada en Nutrición, creo que la base de una vida saludable comienza en torno a lo alimentario, es por esto que pongo siempre mi mayor esfuerzo en adaptar los planes de alimentación 100% a cada individuo considerando sus hábitos de vida y sus necesidades nutricionales. <br> <strong> Mi objetivo </strong> es que trabajemos juntos para mejorar tu relación con la comida y que, gracias a esto, puedas tener una alimentación saludable y una mejor calidad de vida. <br> Vamos a alcanzar nuestras metas paulatinamente, convirtiendo pequeños cambios en un habito diario.                         
                     </p>
@@ -124,7 +124,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
-                        <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
+                        <img src="Imagenes/Planes-de-alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Planes de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -135,7 +135,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
-                        <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios">
+                        <img src="Imagenes/antro-index.jpg" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Antropometrias</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -146,7 +146,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center  imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
-                        <img src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
+                        <img src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -157,7 +157,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="como-trabajo.html#atencionOnline">
-                        <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
+                        <img src="Imagenes/online-index.jpg" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Atención online</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -168,7 +168,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="como-trabajo.html#atencionDomicilio">
-                        <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
+                        <img src="Imagenes/domicilio-index.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Atención a domicilio</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -179,7 +179,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="como-trabajo.html">
-                        <img src="Imagenes/foto compu mano.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
+                        <img src="Imagenes/foto-compu-mano.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Otros beneficios</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -258,7 +258,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es: ">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -273,7 +273,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
