--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,8 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav d-flex justify-content-evenly linksNavegacion">
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi
-                            </a>
+                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a id="ancorNav" class="nav-link" href="index.html#serviciosPaginaInicio">Servicios</a>
@@ -52,7 +51,7 @@
     <main class="container-fluid">
         <h1 class="titPlanes"> Planes de alimentación</h1>
         <section class="row d-flex justify-content-evenly planesSeccion1">
-            <img class="col-12 col-lg-6 img-fluid juliAtendiendo" loading="lazy" src="Imagenes/atencion en consultorio.JPG" alt="Nutricionista atendiendo en consultorio realizando educacion alimentaria">
+            <img class="col-12 col-lg-6 img-fluid juliAtendiendo" loading="lazy" src="Imagenes/atencion-en-consultorio.jpg" alt="Nutricionista atendiendo en consultorio realizando educacion alimentaria">
             <p class="col-12 col-lg-6 textosPlanes">Los planes de alimentación son adaptados a cada persona según los objetivos que tiene, sus gustos, hábitos, rutina diaria, problemas de salud y mucho más. También se tiene en cuenta el tipo de trabajo, actividad física realizada y actividades extras. <br>La primera consulta nos servirá para conocernos en profundidad y, principalmente, conocer tus gustos alimentarios. Esto me permitirá diseñar un plan de alimentación flexible y adaptado a tu rutina. A lo largo de las consultas vamos a ir trabajando juntos, mejorando paulatinamente la calidad de la alimentación, acercándonos cada vez más a cumplir los objetivos que nos vayamos planteando y formando hábitos para toda la vida. <br>¡Animate a mejorar tu alimentación, aprender sobre la mejor manera de nutrir tu cuerpo y cambiar tu vida!</p>    
         </section>
 
@@ -60,31 +59,31 @@
 
         <h2 class="titulos"> Tipos de planes alimentarios:</h2>
         <section class="listaDePlanes">
-                <ul>
-                    <li>Planes de descenso de peso</li>
-                    <li>Planes de aumento de masa muscular</li>
-                    <li>Planes para deportistas</li>
-                    <li>Planes vegetarianos/veganos</li>
-                    <li>Planes para embarazadas</li>
-                </ul>
+            <ul>
+                <li>Planes de descenso de peso</li>
+                <li>Planes de aumento de masa muscular</li>
+                <li>Planes para deportistas</li>
+                <li>Planes vegetarianos/veganos</li>
+                <li>Planes para embarazadas</li>
+            </ul>
         </section>
 
 <!-- Planes con foto y texto explicativo de cada uno-->
 
         <h3 class="titulos">Planes para deportistas</h3>
         <section class="row d-flex justify-content-evenly planesSeccion2">
-                <img class="col-12 col-lg-6 img-fluid planesImg2" loading="lazy" src="Imagenes/nutricion deportiva.jpg" alt="Foto de nutricion en el deporte">
-                <p class="col-12 col-lg-6 textosPlanes">Para ser los mejores en las diferentes disciplinas es de vital importancia cuidar la alimentación. La nutrición deportiva es fundamental para lograr potenciar el rendimiento al máximo y poder lograr los mejores resultados tanto en los entrenamientos como en las competencias. <br> Es importante tener en cuenta que la alimentación del deportista suele requerir mayor cantidad de necesidades energéticas y precisa hacer hincapié en asuntos como hidratación, recuperación, entre muchos otros. <br>Sin dudas, te recomiendo que comiences con un plan de alimentación 100% personalizado a tu rutina para superar tu rendimiento actual y progresar en tu disciplina. </p>
+            <img class="col-12 col-lg-6 img-fluid planesImg2" loading="lazy" src="Imagenes/nutricion-deportiva.jpg" alt="Foto de nutricion en el deporte">
+            <p class="col-12 col-lg-6 textosPlanes">Para ser los mejores en las diferentes disciplinas es de vital importancia cuidar la alimentación. La nutrición deportiva es fundamental para lograr potenciar el rendimiento al máximo y poder lograr los mejores resultados tanto en los entrenamientos como en las competencias. <br> Es importante tener en cuenta que la alimentación del deportista suele requerir mayor cantidad de necesidades energéticas y precisa hacer hincapié en asuntos como hidratación, recuperación, entre muchos otros. <br>Sin dudas, te recomiendo que comiences con un plan de alimentación 100% personalizado a tu rutina para superar tu rendimiento actual y progresar en tu disciplina. </p>
         </section>
         <h3 class="titulos">Planes vegetarianos/veganos</h3>
         <section class="row d-flex justify-content-evenly planesSeccion3"> 
-                <img class="col-12 col-lg-6 img-fluid planesImg3" loading="lazy" src="Imagenes/vegetariana1.jpg" alt="Foto de alimentación vegetariana/vegana">
-                <p class="col-12 col-lg-6 textosPlanes">Ya sea por motivos religiosos, culturales, personales, o de cualquier tipo, la alimentación vegetariana y la vegana son muy buenas opciones para todos nosotros. <br>¿Se pueden llevar a cabo este tipo de alimentaciones de forma saludable? <br> POR SUPUESTO QUE SI! Juntos vamos a trabajar para lograr una alimentación super variada, divertida y sobre todo COMPLETA, aportando todos los nutrientes que necesitamos para estar sanos. </p>
+            <img class="col-12 col-lg-6 img-fluid planesImg3" loading="lazy" src="Imagenes/vegetariana-1.jpg" alt="Foto de alimentación vegetariana/vegana">
+            <p class="col-12 col-lg-6 textosPlanes">Ya sea por motivos religiosos, culturales, personales, o de cualquier tipo, la alimentación vegetariana y la vegana son muy buenas opciones para todos nosotros. <br>¿Se pueden llevar a cabo este tipo de alimentaciones de forma saludable? <br> POR SUPUESTO QUE SI! Juntos vamos a trabajar para lograr una alimentación super variada, divertida y sobre todo COMPLETA, aportando todos los nutrientes que necesitamos para estar sanos. </p>
         </section>    
         <h3 class="titulos">Planes de alimentación en el embarazo</h3>
         <section class="row d-flex justify-content-evenly planesSeccion4"> 
-                <img class="col-12 col-lg-6 img-fluid planesImg4" loading="lazy" src="Imagenes/Embarazo.jpg" alt="Foto de alimentación en embarazadas">
-                <p class="col-12 col-lg-6 textosPlanes"> Durante esta importante etapa de la vida, las mujeres debemos procurar cuidar nuestra alimentación ya que aumentan los requerimientos de muchos nutrientes y tenemos que poner un especial foco en la nutrición. <br> Juntas vamos a trabajar sobre la alimentación para garantizar un embarazo cuidado, saludable, contemplando siempre tus necesidades, tus hábitos y preferencias. <br>Es importante recordar que, a partir de ahora, no solo estas nutriendo tu cuerpo si no también el de tu bebé. El desarrollo cognitivo e intelectual del bebé se verá afectado (positiva o negativamente) considerando tu manera de nutrirte. Esto también contempla la etapa de lactancia materna. ¡El momento de empezar es hoy!</p>
+            <img class="col-12 col-lg-6 img-fluid planesImg4" loading="lazy" src="Imagenes/Embarazo.jpg" alt="Foto de alimentación en embarazadas">
+            <p class="col-12 col-lg-6 textosPlanes"> Durante esta importante etapa de la vida, las mujeres debemos procurar cuidar nuestra alimentación ya que aumentan los requerimientos de muchos nutrientes y tenemos que poner un especial foco en la nutrición. <br> Juntas vamos a trabajar sobre la alimentación para garantizar un embarazo cuidado, saludable, contemplando siempre tus necesidades, tus hábitos y preferencias. <br>Es importante recordar que, a partir de ahora, no solo estas nutriendo tu cuerpo si no también el de tu bebé. El desarrollo cognitivo e intelectual del bebé se verá afectado (positiva o negativamente) considerando tu manera de nutrirte. Esto también contempla la etapa de lactancia materna. ¡El momento de empezar es hoy!</p>
         </section>
         
 <!-- RESERVA TU TURNO -->
@@ -137,7 +136,7 @@
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                     <button type="button" class="btn botonModalWhatsapp">
                                         <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
                                     </button>
                                 </div>
@@ -163,7 +162,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
-                            <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
+                            <img src="Imagenes/antro-index.jpg" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Antropometrias</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -174,7 +173,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
-                            <img src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
+                            <img src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -239,7 +238,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -254,7 +253,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
