--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -51,23 +51,23 @@
     <main>
         <h1 class="tituloTalleres"> Talleres de alimentación</h1>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres1" src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Taller de alimentación realizado presencial en el jardin agronomitos">
-            <p class="col-12 col-lg-6 textosTalleres">La educación alimentaria es fundamental para tener una vida saludable y aprender a mejorar diferentes aspectos de la alimentación. Por eso, considero fundamental la realizacion de talleres educativos para poder adquirir nuevos conocimientos relacionados con una buena nutrición y comenzar de a poco a introducirse en este cambio hacia una vida mejor y mas saludable. </p>    
+            <img class="col-12 col-lg-6 img-fluid imgTalleres1" src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Taller de alimentación realizado presencial en el jardin agronomitos">
+            <p class="col-12 col-xl-6 textosTalleres">La educación alimentaria es fundamental para tener una vida saludable y aprender a mejorar diferentes aspectos de la alimentación. Por eso, considero fundamental la realizacion de talleres educativos para poder adquirir nuevos conocimientos relacionados con una buena nutrición y comenzar de a poco a introducirse en este cambio hacia una vida mejor y mas saludable. </p>    
         </section>
 
 <!-- Taller virtual-->
 
         <h2 class="titulos">Talleres virtuales</h2>
         <section class="row d-flex justify-content-evenly talleresFotoDerecha">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres2" loading="lazy" src="Imagenes/Imagen taller virtual.jpeg" alt="Taller realizado de forma virtual para las cocineras del jardin agronomitos">
-            <p class="col-12 col-lg-6 textosTalleres"> Si bien la pandemia trajo aparejado muchos momentos desafortunados, debemos destacar la posibilidad que nos dio de aprovechar al máximo las redes sociales. <br> La educación en formato virtual fue una excelente herramienta para seguir aprendiendo a la distancia. <br> Desde mi parte, me resultó una estrategia excelente para seguir en contacto con mis pacientes y también para realizar actividades educativas como los talleres. <br>Esto nos brinda facilidades a todos y cada uno de nosotros que únicamente con tener acceso a una pantalla, podemos estar conectados desde distintas partes del mundo y al mismo tiempo compartir espacios educativos. </p>
+            <img class="col-12 col-lg-6 img-fluid imgTalleres2" loading="lazy" src="Imagenes/Imagen-taller-virtual.jpeg" alt="Taller realizado de forma virtual para las cocineras del jardin agronomitos">
+            <p class="col-12 col-xl-6 textosTalleres"> Si bien la pandemia trajo aparejado muchos momentos desafortunados, debemos destacar la posibilidad que nos dio de aprovechar al máximo las redes sociales. <br> La educación en formato virtual fue una excelente herramienta para seguir aprendiendo a la distancia. <br> Desde mi parte, me resultó una estrategia excelente para seguir en contacto con mis pacientes y también para realizar actividades educativas como los talleres. <br>Esto nos brinda facilidades a todos y cada uno de nosotros que únicamente con tener acceso a una pantalla, podemos estar conectados desde distintas partes del mundo y al mismo tiempo compartir espacios educativos. </p>
         </section>
 
 <!-- Taller presencial-->
         <h2 class="titulos">Taller presencial </h2>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres3" loading="lazy" src="Imagenes/Talleres alimentacion.jpg" alt="Foto de un taller educativo con niños">
-            <p class="col-12 col-lg-6 textosTalleres"> Los talleres de alimentación presenciales se llevan a cabo en toda institucion (clubes, colegios, empresas, etc.) que quiera abordar de manera mas saludable la alimentación de sus integrantes. En ellos, abordamos diferentes tematicas segun los diferentes aspectos de la nutrición que se quieran profundizar como alimentación saludable, nutrición deportiva, alimentación en los primeros años de vida, alimentación para los adultos mayores, etc. .</p>
+            <img class="col-12 col-lg-6 img-fluid imgTalleres3" loading="lazy" src="Imagenes/Talleres-alimentacion.jpg" alt="Foto de un taller educativo con niños">
+            <p class="col-12 col-xl-6 textosTalleres"> Los talleres de alimentación presenciales se llevan a cabo en toda institucion (clubes, colegios, empresas, etc.) que quiera abordar de manera mas saludable la alimentación de sus integrantes. En ellos, abordamos diferentes tematicas segun los diferentes aspectos de la nutrición que se quieran profundizar como alimentación saludable, nutrición deportiva, alimentación en los primeros años de vida, alimentación para los adultos mayores, etc. .</p>
         </section>
 
 <!-- RESERVA TU TURNO -->
@@ -120,7 +120,7 @@
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                     <button type="button" class="btn botonModalWhatsapp">
                                         <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
                                     </button>
                                 </div>
@@ -146,7 +146,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
-                            <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
+                            <img src="Imagenes/Planes-de-alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Planes de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -157,7 +157,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
-                            <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
+                            <img src="Imagenes/antro-index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Antropometrías</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -223,7 +223,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -238,7 +238,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
