--- a/antropometrias.html
+++ b/antropometrias.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
     <main class="container-fluid">
         <h1 class="tituloAntropometria"> Antropometrías</h1>
         <section class="row d-flex justify-content-evenly antroFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto 1 antro.JPG" alt="Foto principal de la pagina de antropometrias">
+            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto-1-antro.jpg" alt="Foto principal de la pagina de antropometrias">
             <p class="col-12 col-lg-6 textosAntro">La antropometría consiste en una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada individuo. <br> Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente de que está conformado nuestro peso. <br>Gracias a la antropometría vamos a conocer dos variables: <strong> Las modificables </strong> (Con una buena alimentación y entrenamiento): MASA MUSCULAR y MASA GRASA y <strong>las no modificables: </strong> MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Órganos y vísceras)
                 </p>    
         </section>
@@ -61,7 +61,7 @@
         <section>
             <h2 class="titulos">Determinacion de masa adiposa</h2>
             <div class="row d-flex justify-content-evenly antroFotoADerecha">
-                <img class="col-12 col-lg-6 img-fluid fotoGrasa" loading="lazy" src="Imagenes/antro index.JPG" alt="Imagen de la masa grasa determinada a traves de la antropometria">
+                <img class="col-12 col-lg-6 img-fluid fotoGrasa" loading="lazy" src="Imagenes/antro-index.jpg" alt="Imagen de la masa grasa determinada a traves de la antropometria">
                 <p class="col-12 col-lg-6 textosAntro"> La masa adiposa se determina a partir de los pliegues grasos. Los mismos se pueden evaluar individualmente o utilizar como parametro la SUMATORIA DE 6 PLIEGUES (Triceps, Sub-escapular, Supraespinal, Abdominal, Muslo y Pantorilla): Un índice excelente para analizar como esta nuestro tejido adiposo actualmente y para ver los progresos a lo largo del tiempo.</p>
             </div>
         </section>
@@ -72,7 +72,7 @@
         <section>
             <h2 class="titulos tituloMasaMuscular">Determinacion de masa muscular</h2>
             <div class="row d-flex justify-content-evenly antroFotoIzquierda">
-                <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag antro.JPG" alt="Imagen de la masa muscular determinada a traves de la antropometria">
+                <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag-antro.jpg" alt="Imagen de la masa muscular determinada a traves de la antropometria">
                 <p class="col-12 col-lg-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Si bien el entrenamiento de fuerza es fundamental para aumentar los niveles de masa magra, también es muy importante saber acompañar esta actividad física con el correcto balance energético y de macro/micronutrientes. Estos deben ser dos pilares infaltables en la vida de cada uno de nosotros. </p>
             </div>
         </section> 
@@ -127,7 +127,7 @@
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                     <button type="button" class="btn botonModalWhatsapp">
                                         <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
                                     </button>
                                 </div>
@@ -153,7 +153,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
-                            <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
+                            <img src="Imagenes/Planes-de-alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Planes de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -164,7 +164,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
-                            <img src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
+                            <img src="Imagenes/Foto-taller-de-alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
@@ -229,7 +229,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -244,7 +244,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
