--- a/como-trabajo.html
+++ b/como-trabajo.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand contenedorLogo" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,21 +50,21 @@
         <section>
             <h2 class="titulos">Atención online</h2>
             <div class="row d-flex justify-content-evenly comoTrabajoParteIzquierda">
-                <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="fotoAtencionOnline">
+                <img src="Imagenes/online-index.jpg" loading="lazy" alt="Servicio de Consultas Online" class="fotoAtencionOnline">
                 <p class="col-12 col-xl-6 textosComoTrabajo">La tecnología nos permite mantenernos cerca a pesar de encontrarnos a miles de kilómetros de distancia. Si hacer coincidir tu rutina con el turno presencial se vuelve un caos, tenés que saber que la alternativa online siempre esta presente. De esta forma podrás conectarte desde tu casa, el trabajo, vacaciones, etc y poder seguir cuidando tu alimentación estes donde estes.</p>
             </div>
         </section>
         <section id="atencionDomicilio">
             <h2 class="titulos">Atención a domicilio</h2>
             <div class="row d-flex justify-content-evenly comoTrabajoParteDerecha">
-                <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="fotoAtencionDomicilio">
+                <img src="Imagenes/domicilio-index.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="fotoAtencionDomicilio">
                 <p class="col-12 col-xl-6 textosComoTrabajo"> La opción de atención a domicilio surge de la necesidad de poder ayudar a todos aquellos que no tienen la posibilidad de acudir al consultorio, presentándoles la alternativa de acercarme a sus hogares. <br> Estos encuentros nos permitirán conocernos, hacer una anamnesis completa y crear un plan de alimentación 100% adecuado a cada paciente. Quienes lo deseen, también podrán realizarse mediciones antropométricas.</p>
             </div>
         </section>
         <section id="otrosBeneficios">
             <h2 class="titulos">Otros beneficios</h2>
             <div class="row d-flex justify-content-evenly contenedorBeneficios">
-                <img src="Imagenes/foto compu mano.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="fotoOtrosBeneficios">
+                <img src="Imagenes/foto-compu-mano.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="fotoOtrosBeneficios">
                 <div class="col-12 col-xl-6">
                     <p class="textosComoTrabajo"> Mi principal objetivo es que te decidas a mejorar tu alimentación y que de esta forma logres concretar tus metas. Para esto, trato de adaptarme 100% a tus necesidades y de brindarte la mejor atención y servicio posible. El mismo, consta de los siguientes beneficios: </p>
                     <ul class="listaBeneficios">
@@ -127,7 +127,7 @@
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                     <button type="button" class="btn botonModalWhatsapp">
                                         <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
                                     </button>
                                 </div>
@@ -199,7 +199,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -214,7 +214,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
