--- a/reserva-tu-turno.html
+++ b/reserva-tu-turno.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                     <button type="button" class="btn botonModalWhatsapp">
                                         <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería pedir un turno de ">
-                                            <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                            <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                         </a>
                                     </button>
                                 </div>
@@ -170,7 +170,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -185,7 +185,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
