--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo JG Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
             <h1 class="titPagSobreMi"> Sobre Mi</h1>
             <h2 class="porQueNutricion titulos">¿Por qué nutrición?</h2>
             <section class="row d-flex justify-content-evenly sobreMi1">
-                <img class="col-12 col-lg-6 img-fluid fotoSobreMi1" src="Imagenes/Foto juli gimenez nutricionista.JPG" loading="lazy" alt="Foto de la nutricionista Juliana Gimenez">
+                <img class="col-12 col-lg-6 img-fluid fotoSobreMi1" src="Imagenes/Foto-juli-gimenez-nutricionista.jpg" loading="lazy" alt="Foto de la nutricionista Juliana Gimenez">
                 <p class="col-12 col-lg-6 textoSobreMi"> Desde muy chica siempre tuve curiosidad por todo lo que me rodeaba, pero nunca había reparado puntualmente en los alimentos en sí. A pesar de esto, siempre disfruté mucho el hecho de comer y compartir momentos en los que la comida conformaba el punto de encuentro. <br>A medida que los años pasaban, comencé a interiorizarme cada vez más en la alimentación saludable, los beneficios que tenia esto para mi organismo y como podía adaptarse a cada individuo considerando el entorno en el que cada uno habita. <br>Mi curiosidad iba aumentando y fue en ese momento cuando decidí formarme como Lic. en Nutrición para dar respuesta a todos los interrogantes y luego, poder transmitirle a los demás esta pasión por los alimentos y su poder preventivo a nivel de la salud.</p>
             </section>
             <h2 class="titulos">Formación profesional</h2>
@@ -58,7 +58,7 @@
                 <p class="col-12 col-lg-6 textoSobreMi"> Comencé mi camino en nutrición en el Instituto Universitario CEMIC (IUC). En el mismo estudié durante 5 años (2016-2020) y durante ese período comprendí que la nutrición es mucho más amplia de lo que podía imaginar. Presenta un abanico de materias que abarca muchas áreas (economía, salud pública, psicología, entre muchísimas otras) en donde fui adquiriendo conocimientos para luego desarrollarme como profesional. <br>Durante mi etapa de estudiante, también tuve la oportunidad de tener practicas en el Hospital CEMIC, entrando en contacto con pacientes, lo que me ayudo a comprender el trato paciente-profesional desde mis primeros pasos en el área.</p>
             </section>
             <section class="row d-flex justify-content-evenly sobreMi3"> 
-                <img class="col-12 col-lg-6 img-fluid garrahan" loading="lazy" src="Imagenes/sobre mi garrahan.jpg" alt="Foto de la pasantia realizada en el Hospital Garrahan">
+                <img class="col-12 col-lg-6 img-fluid garrahan" loading="lazy" src="Imagenes/sobre-mi-garrahan.jpg" alt="Foto de la pasantia realizada en el Hospital Garrahan">
                 <p class="col-12 col-lg-6 textoSobreMi"> Una de las etapas que más disfrute fue la de nutrición pediátrica, tanto al momento de estudiarlo como llevarlo a la práctica. Es por esto, que al terminar la carrera decidí seguir aprendiendo y especializándome en la alimentación de los más chiquitos. Finalmente, luego de recibirme como Licenciada, tome la decisión de continuar nutriéndome de conocimiento en una pasantía que ofrece el Hospital “Prof. Dr. Juan P. Garrahan”, en el cual forme parte del equipo de nutrición clínica a lo largo de 6 intensos meses. Durante ese tiempo aprendí muchísimo sobre nutrición, pero también sobre esfuerzo, dedicación, empatía y trabajo en equipo. Los niños son el futuro, y no hay nada más gratificante que poder crear en ellos hábitos saludables, manteniendo una alimentación adecuada, balanceada y variada. <br>En esta inmensa institución no solo me nutrí de conocimiento, sino que también tuve la suerte de encontrarme con muy buenos colegas que hoy en día son parte de mi vida. </p>
             </section>
         </div>
@@ -118,7 +118,7 @@
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
                                                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
-                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
                                         </div>
@@ -133,7 +133,7 @@
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
-                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
+                    <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
         </section>
