Saque la clase del titulo de reservas xq tenia un margin muy grande y quedaba horrible

--- a/antropometrias.html
+++ b/antropometrias.html
@@ -79,7 +79,7 @@
 
 <!-- RESERVA TU TURNO -->
 
-        <h2 class="tituloReserva titulos"> Empezá hoy el cambio, reserva tu turno</h2>
+        <h2 class="titulos"> Empezá hoy el cambio, reserva tu turno</h2>
         <section class="row d-flex justify-content-evenly contenedorReservas">
             <div class="col-12 col-lg-6 cajaReservas">
                 <form action="archivo.php" method="POST" class="reservas">
