--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -88,7 +88,7 @@
         
 <!-- RESERVA TU TURNO -->
 
-        <h3 class="tituloReserva titulos"> Empezá hoy el cambio, reserva tu turno</h3>
+        <h3 class="titulos"> Empezá hoy el cambio, reserva tu turno</h3>
         <section class="row d-flex justify-content-evenly contenedorReservas">
             <div class="col-12 col-lg-6 cajaReservas">
                 <form action="archivo.php" method="POST" class="reservas">
