Copie y pegue header y footer del index en todas las paginas

--- a/reserva-tu-turno.html
+++ b/reserva-tu-turno.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" loading="lazy" alt="Logo Nutrición JG" width="90"  class="d-inline-block align-text-top logoPrincipal">
+                    <img src="Imagenes/Logo-JG-Nutricion.jpeg" alt="Logo Nutrición JG" width="90" loading="lazy" class="d-inline-block align-text-top logoPrincipal">
                 </a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,8 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav d-flex justify-content-evenly linksNavegacion">
                         <li class="nav-item">
-                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi
-                            </a>
+                            <a id="ancorNav" class="nav-link" href="sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
                             <a id="ancorNav" class="nav-link" href="index.html#serviciosPaginaInicio">Servicios</a>
@@ -143,13 +142,13 @@
                 <form action="archivo.php" method="POST">
                     <div class="row d-flex justify-content-center">
                         <div class="col-auto">
-                            <p class="pt-2">
+                            <p class="pt-2 textoFooterDescuentos">
                                 Accedé a increibles descuentos y no te pierdas ninguna novedad:
                             </p>
                         </div>
                         <div class="col-md-5 col-12">
                             <div class="form-outline form-white">
-                                <input type="email" id="form5Example21" class="form-control" placeholder="Correo electronico"/>
+                                <input type="email" id="form5Example21" class="form-control placeholderFooter" placeholder="Correo electronico"/>
                             </div>
                         </div>
                         <div class="col-auto">
@@ -169,7 +168,7 @@
                                         <div class="modal-footer d-flex justify-content-center">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                                             <button type="button" class="btn botonModalWhatsapp">
-                                                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es:">
+                                                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería suscribirme a los mails de descuentos y beneficios. Mi mail es: ">
                                                     <img src="Imagenes/Boton-Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
                                                 </a>
                                             </button>
